--- a/src/entrypoints/sidepanel/index.html
+++ b/src/entrypoints/sidepanel/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>社媒助手开源版</title>
+    <title>小红书助手</title>
     <link rel="stylesheet" href="~/assets/tailwind.css" />
   </head>
   <body>
